# URP_example

./: README.md
CarMaker_ROS2_Original/: .rviz2.rviz  CMStart.sh  build_cmrosif.sh  ros_setup.bash
CarMaker_ROS2_Original/Data/Config/: CMRosIFParameters  DVA  Default.lcfg  Default_01.lcfg  Plugins  Project  Settings.sce  SimNetParameters
CarMaker_ROS2_Original/Data/Road/: .tmp__amlab.0  Sangam_AD_TestRoad_v3_ipg_final.rd5  Sangam_AD_TestRoad_v3_ipg_v3.rd5  Sangam_AD_TestRoad_v3_ipg_v5.rd5  ScenarioBasic.xodr  ScenarioBasic_14.rd5  ScenarioBasic_14.xodr  ScenarioBasic_15.xodr  ScenarioBasic_16.xodr  example_bank_map.rd5  kcity_xodr.xodr  kiapi_map_ver1.rd5  kiapi_map_ver1.xodr
CarMaker_ROS2_Original/Data/Road/Examples/Synthetic/Scenario/: Expressway_SCurve.rd5  RuralRoad_Tollgate.rd5  RuralRoad_UrbanRoad.rd5  UrbanRoad_RuralRoad_Expressway.rd5
CarMaker_ROS2_Original/Data/Script/: CMRosIF_UserUtils.tcl
CarMaker_ROS2_Original/Data/Sensor/: LidarRSI_Default_mod
CarMaker_ROS2_Original/Data/Sensor/EphemRinex/rinex_2014/: brdc1820.14n
CarMaker_ROS2_Original/Data/TestRun/: .tmp__amlab.0  .tmp_amlab_amlab.0  .tmp_ipg-pc-21_ipg-pc-21.1  CMRosIF_Testing  CityDriving_CMRosIF_SensorExtension  HighWayDriving_CMRosIF_SensorExtension  Kcity  LidarRSI_Countryside_CMRosIF_SensorExtension  Sangam_AD_HK_sc5[control]  Sangam_AD_HK_sc6[control]  Sangam_AD_HK_sc6[dm]  Sangam_AD_HK_sc6[dm]_s2  Sangam_AD_HK_sc6[dm]_s3  Sangam_AD_HK_sc6[dm]_s4_start  Sangam_AD_HK_sc6[dm]_s5_start_obj  Sangam_AD_HK_sc6[dm]_s6_start_obj  Sangam_AD_HK_sc6[dm]_s7_signle_obj  Sangam_AD_HK_sc6[dm]_s8_lc_test  URP_example  example  example2  example3  opendrive_map_test1
CarMaker_ROS2_Original/Data/Vehicle/: .tmp_amlab_amlab.1  .tmp_ipg-pc-21_ipg-pc-21.1  DEEV_Based_AE_EV_SOP_AVControl_rev  DEEV_Based_AE_EV_SOP_Lidar_AVcontrol_rev  DEEV_Based_AE_EV_SOP_Lidar_AVcontrol_rev_0503  DEEV_Based_AE_EV_SOP_Lidar_rev  DEEV_Based_AE_EV_SOP_rev  DemoCar_CMRosIF_SensorExtension  Demo_IPG_CompanyCar_CMRosIF_SensorExtension
CarMaker_ROS2_Original/Movie/: Camera.cfg.autobackup  VDS-1.cfg  VDS-2.cfg  VDS-3.cfg  VDS-4.cfg  VDS.cfg
CarMaker_ROS2_Original/Movie/.road_cache/: .tmp_amlab_amlab.0.roadgeo  .tmp_amlab_amlab.1.amlab_0.roadgeo  .tmp_amlab_amlab.1.roadgeo  example3.roadgeo  opendrive_map_test1.roadgeo
CarMaker_ROS2_Original/Movie/3D/Terrain/: sangam_v3_1209.roadgeo
CarMaker_ROS2_Original/SimOutput/amlab/: config.info
CarMaker_ROS2_Original/SimOutput/amlab-Legion-T7-34IMZ5/: config.info
CarMaker_ROS2_Original/include/: CMRosIF.h
CarMaker_ROS2_Original/ros/ros2_ws/: build.sh  build4eclipse.sh
CarMaker_ROS2_Original/ros/ros2_ws/install/: local_setup.sh  setup.sh
CarMaker_ROS2_Original/ros/ros2_ws/install/carmaker_vds_client/lib/carmaker_vds_client/: IPGMovie_VDS_helper.sh  carmaker_vds_client_node
CarMaker_ROS2_Original/ros/ros2_ws/install/carmaker_vds_client/share/carmaker_vds_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
CarMaker_ROS2_Original/ros/ros2_ws/install/hellocm_cmnode/include/: a
CarMaker_ROS2_Original/ros/ros2_ws/log/: latest_build
CarMaker_ROS2_Original/ros/ros2_ws/map/: example_road.json
CarMaker_ROS2_Original/ros/ros2_ws/src/carmaker_vds_client/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/carmaker_vds_client/launch/: IPGMovie_VDS_helper.sh  carmaker_vds_client.launch.py
CarMaker_ROS2_Original/ros/ros2_ws/src/carmaker_vds_client/src/: carmaker_vds_client_node.cpp
CarMaker_ROS2_Original/ros/ros2_ws/src/cm_control_example/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/cm_control_example/src/: main.cpp
CarMaker_ROS2_Original/ros/ros2_ws/src/cmrosutils/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/control_test/: CMakeLists.txt  package.xml
CarMaker_ROS2_Original/ros/ros2_ws/src/control_test/src/: controlTest.cpp  controlTest.hpp  utils.hpp
CarMaker_ROS2_Original/ros/ros2_ws/src/custom_msgs/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm/src/: ROS1_HelloCM.cpp
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm_cmnode/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm_cmnode/meshes/: IPG_CompanyCar_2020_Orange.dae  IPG_CompanyCar_2020_Wheel.dae
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm_cmnode/src/: CMNode_ROS1_HelloCM.cpp
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm_msgs/: CMakeLists.txt
CarMaker_ROS2_Original/ros/ros2_ws/src/hellocm_msgs/msg/: VehicleInfoOut.msg
CarMaker_ROS2_Original/ros/ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CarMaker_ROS2_Original/ros/ros2_ws/src/log/: latest_build
CarMaker_ROS2_Original/src/: .depend  Makefile  User.c  app_tmp.c  cmenv.m
CarMaker_ROS2_Original/src_cm4sl/: cmenv.m  generic.mdl
(+375 files in other folders)
